experimentData/Jadx-detailedExperimentData/errorSamples/recompilation_failures/116/reduced-116/tmp/jadx/tmp/output.txt
Test.java:135: error: incomparable types: boolean and int
            if (z == 0) {
                  ^
Test.java:161: error: bad operand types for binary operator '+'
                        vMeth_check_sum += ((((((((i3 + z) + i4) + i9) + i5) + i14) + i13) + Float.floatToIntBits(f2)) + i12) - 201;
                                                      ^
  first type:  int
  second type: boolean
Note: Test.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
